--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,4 +6,4 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/board_back0"
-    tools:context=".activity.MainActivity" />
+    tools:context=".activity.GameActivity" />
