--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,4 +15,16 @@
         <item name="android:windowFullscreen">true</item>
 
     </style>
+
+    <style name="Theme.AirHockey.Fullscreen" parent="Theme.AirHockey">
+        <item name="android:actionBarStyle">@style/Widget.Theme.AirHockey.ActionBar.Fullscreen
+        </item>
+        <item name="android:windowActionBarOverlay">true</item>
+        <item name="android:windowBackground">@null</item>
+    </style>
+
+    <style name="ThemeOverlay.AirHockey.FullscreenContainer" parent="">
+        <item name="fullscreenBackgroundColor">@color/light_blue_600</item>
+        <item name="fullscreenTextColor">@color/light_blue_A200</item>
+    </style>
 </resources>
