--- a/app/src/main/res/layout/bluetooth_device.xml
+++ b/app/src/main/res/layout/bluetooth_device.xml
@@ -7,5 +7,8 @@
         android:id="@+id/bluetooth_name"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="TextView" />
+        android:text="TextView"
+        android:textSize="20dp"
+        android:padding="5dp"
+        android:textAlignment="center"/>
 </FrameLayout>
