--- a/app/src/main/res/layout/devices_list.xml
+++ b/app/src/main/res/layout/devices_list.xml
@@ -13,11 +13,31 @@
         android:layout_height="wrap_content"
         android:text="select opponent"
         android:textAlignment="center"
-        android:textSize="30dp" />
+        android:textSize="24dp"
+        android:layout_marginBottom="10dp"/>
+
+    <Button
+        android:id="@+id/scan_btn"
+        android:layout_width="match_parent"
+        android:textSize="20dp"
+        android:textColor="@color/cardview_light_background"
+        android:background="@color/design_default_color_secondary_variant"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Scan" />
 
     <ListView
         android:id="@+id/bluetooth_devices"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent" >
+    </ListView>
+
+    <TextView
+        android:id="@+id/empty_list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:textSize="20dp"
+        android:text="no device available" />
 
 </LinearLayout>
